# ProjectOOP

./: Account.cpp  Account.h  CMakeLists.txt  Cash.cpp  Employee.cpp  Employee.h  Person.cpp  Person.h  Programmer.cpp  Programmer.h  ReadMe.txt  Student.cpp  Student.h  main.cpp
